--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -4830,6 +4830,17 @@ ul.nav_menu_1 {
         margin-right: 5px;
     }
 }
+.delete-note-btn{
+    float:right;
+    border: 1px solid #CFCFCF;
+    padding: 5px 10px;
+    border-radius: 3px;
+    color:#A2A2A2;
+    background-color: #f7f7f7;
+    i{
+        margin-right: 5px;
+    }
+}
 
 .jqtree-title > .fa-check{
     color: green;
