--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/note_page.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/note_page.html
@@ -76,6 +76,7 @@
             {% if is_gstaff or node.created_by == request.user.id %}
 
                <a class="edit-note-btn" data-note-id="{{node.pk}}"><i class ="fi-pencil"></i>Edit</a> 
+               <a class="delete-note-btn" data-note-id="{{node.pk}}"><i class ="fi-trash"></i>Delete</a> 
             {% endif %}
 
         </div>
@@ -146,6 +147,32 @@ $(document).on('click','.view-more-tags',function(){
     $(document).on('click', '.edit-note-btn', function() {
         node_id = $(this).attr('data-note-id')
         load_page_create_edit(node_id)
+    });
+    $(".delete-note-btn").click(function(){
+            if (confirm("Do you want to delete this note?.") == true) {
+                $.ajax({
+                          type: "POST",
+                          data:{
+                                'csrfmiddlewaretoken': "{{csrf_token}}",
+                                'activity_id' : "{{node.pk}}",
+                            },
+                          url: "{% url 'delete_activity_page' group_id %}",
+                          datatype: "json",
+                          success: function(data) {
+                            console.log(data)
+                            if (data=="success"){
+                                // $.each(coll_arr, function(ind,activity_id){
+                                //     $("a[data-del-activity-page-id='"+activity_id+"']").addClass('hide')
+                                // })
+                                location.href = "{% url 'course_notebook' group_id %}"
+                            }
+                            else{
+                                alert("Something went wrong. Please try again later.")
+                            }
+                        }
+                    });
+                }
+
     });
 
 </script>
