--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_video_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_video_player.html
@@ -40,7 +40,7 @@
 			{% get_relation_value video_obj.pk 'has_transcript' as transcript_rel %}
 			{% if transcript_rel %}
 			<div>
-				<button class="transcript-toggler" onclick="togglerTranscript(this)">A</button>
+				<button class="small radius transcript-toggler" onclick="togglerTranscript(this)">Transcript</button>
 	      			<div class="transcript-data hide">
 	      				<object type="text/html" data="{{MEDIA_URL}}{{transcript_rel.grel_node.if_file.original.relurl}}" style="width:100%; height:100%"></object>
 	      			</div>
