--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -5109,3 +5109,16 @@ ul.nav_menu_1 {
     padding-top:7px !important;
     text-transform: uppercase;
 }
+
+.double-buttons{
+    margin-top: 285px;
+    margin-left: 729px;
+}
+
+.lesson-form-name{
+    padding-top: 10px;
+}
+
+.lesson-form-desc{
+    padding-top: 25px;
+}
