--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -288,23 +288,34 @@ This will not be used because now only existing activities will be added.
 
 <!-- overlay/reveal to add lesson -->
 <div id="add-lesson-reveal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
-    <h3>{% trans "Lesson Name" %}</h3>
-    <input type="text" id="lesson-name">
-    <select class="lesson-lang" name="lan" id="lesson_lang" style="height:43px;">
-                            {% get_language_info_list for LANGUAGES as languages %}
-                            
-                            {% for language in languages %}
-                                {% if lesson_language == language.code %}
-                                    <option selected value="{{ language.code }}" data-sub-lang="{{ language.name }}" data-sub-code="{{ language.code }}">
-                                      {{ language.name }}
-                                {% else %}
-                                    <option value="{{ language.code }}" data-sub-lang="{{ language.name }}" data-sub-code="{{ language.code }}">
-                                      {{ language.name }}
-                                    </option>
-                                {% endif %}
-                            {% endfor %}
-                          </select><br/>
-    <button type="button" class="button-hollow-grey save-lesson add-lesson-top-margin" data-node-id=""> {% trans "Save Lesson" %} </button>
+   <div>
+        <div class="small-3 columns left"><h3>Language Selection</h3></div>
+        <div class="small-9 columns right">
+               <select class="lesson-lang" name="lan" id="lesson_lang" style="height: 42px;">
+                    {% get_language_info_list for LANGUAGES as languages %}
+                                        
+                        {% for language in languages %}
+                            {% if lesson_language == language.code %}
+                                <option selected value="{{ language.code }}" data-sub-lang="{{ language.name }}" data-sub-code="{{ language.code }}">{{ language.name }}</option>
+                            {% else %}
+                                <option value="{{ language.code }}" data-sub-lang="{{ language.name }}" data-sub-code="{{ language.code }}">{{ language.name }}</option>
+                            {% endif %}
+                        {% endfor %}
+                </select><br/>
+        </div>
+    </div>
+    <div>
+        <div class="small-3 columns left lesson-form-name"><h3>{% trans "Lesson Name" %}</h3></div>
+        <div class="small-9 columns right"><input type="text" id="lesson-name"></div>
+    </div>
+    <div>
+        <div class="small-3 columns left lesson-form-desc"><h3>{% trans "Lesson Description" %}</h3></div>
+        <div class="small-9 columns right"><textarea rows="6" cols="50"></textarea></div>
+    </div>
+    <div class="double-buttons">
+        <button type="button" class="button-hollow-grey save-lesson add-lesson-top-margin" data-node-id=""> {% trans "Save Lesson" %} </button>
+        <button type="button" class="button-hollow-grey save-lesson add-lesson-top-margin" data-node-id=""> {% trans "Cancel" %} </button>
+    </div>
     <a class="close-reveal-modal" aria-label="Close">&#215;</a>
 </div>
 <!-- END of overlay/reveal to add lesson -->
