--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_player.html
@@ -129,10 +129,9 @@
               <div class="row activity-comments-section">
                   <div class="columns small-12 " id="view-discussion">
                         <!-- discussion content area -->
-                        {% get_thread_node node.pk as thread_node %}
-                        {% if thread_node and "QuizItemEvent" not in node.member_of_names_list %}
-                            {% get_disc_replies thread_node group_id global_disc_all_replies as all_replies %}
-                            {% get_node thread_node as thread_node_obj %}
+                        {% get_thread_node node.pk as thread_node_obj %}
+                        {% if thread_node_obj and "QuizItemEvent" not in node.member_of_names_list %}
+                            {% get_disc_replies thread_node_obj.pk group_id global_disc_all_replies as all_replies %}
                             {% include 'ndf/gin-line-texteditor.html' with node=thread_node_obj var_name="content_org" allow_to_comment=allow_to_comment %}
                         {% endif %}
 
