cancel button commente

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -315,7 +315,9 @@ This will not be used because now only existing activities will be added.
     </div>
     <div class="double-buttons">
         <button type="button" class="button-hollow-grey save-lesson add-lesson-top-margin" data-node-id=""> {% trans "Save Lesson" %} </button>
+        {% comment %}
         <button type="button" class="button-hollow-grey save-lesson add-lesson-top-margin" data-node-id=""> {% trans "Cancel" %} </button>
+        {% endcomment %}
     </div>
     <a class="close-reveal-modal" aria-label="Close">&#215;</a>
 </div>
