Iframe rendering in ACtvity player with full width

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
@@ -16,6 +16,9 @@
   .disabled , .disabled i {
     color:gray !important;
   }
+  .node-content-div{
+    overflow-x: scroll;
+  }
 </style>
 
 {% include 'ndf/widget_user_access_modal.html' %}
