Find the Rate tool added

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
@@ -235,5 +235,8 @@
                 <div  class="inner">
                     <button type="button"  class="right orange-button " id="insert_icl_l4a2_te" >Insert PR_U3_L4_A2_ICL (te) </button>
                 </div>
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_find_the_rate" >Insert Find the rate </button>
+                </div>
             </div>
 </div>
