--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/horizontal_card.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/horizontal_card.html
@@ -15,7 +15,7 @@
     </div>
     <div class="card_summary">
         <div class="card_section">
-            <p class="module_brief" title="{{node.content|safe}}">
+            <p class="module_brief" style="height:10rem;">
                 {{node.content|safe}}
             </p>
         </div>
