--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_node_form.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_node_form.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 <div class="row group_content">
-    <div class="small-12 columns  group_sections_content" id="scstyle">
+    <div class="small-12 columns  group_sections_content">
         <form enctype="multipart/form-data" method="post" action="{{post_url}}" class="node-create-edit-form">
             {% csrf_token %}
             <!-- _id -->
